Makes a few alterations to the pages that shipped this morning including fixing an image on mobile, adding a line requested by Blossom to the top of Guidance.

--- a/_scss/_uswds-theme-custom-styles.scss
+++ b/_scss/_uswds-theme-custom-styles.scss
@@ -499,7 +499,9 @@ sup a {
 }
 
 .era-guidance__diagram {
-  max-width: 480px;
+  @include at-media(tablet) {
+    max-width: 480px;
+  }
 }
 
 // Guidelines
